# aython

./: .gitignore  QUICK_START.md  README.md  TESTING.md  pyproject.toml  pytest.ini  python_runner.py  run_tests.py
.github/workflows/: publish.yaml  test.yml
src/aipython/: __init__.py
src/aithon/: __init__.py
src/aython/: __init__.py  aython_agent.py  docker-compose.yml
src/aython/agent/: Dockerfile  requirements.txt
src/aython/agent/app/: aython_agent.py  main.py
src/aython/executor/: Dockerfile  requirements.txt  server.py
src/aython/magics/: Dockerfile  README.md  requirements.txt
src/aython/magics/app/: Untitled.ipynb  Untitled1.ipynb  __init__.py  aython_magics.py  aython_setup.ipynb  jupyter_notebook_config.py  load_aython.py  start_jupyter.py
tests/: __init__.py  conftest.py  test_aython.py  test_docker_integration.py  test_e2e.py
