[project]
name = "aython"
version = "0.1.0"
description = "A Python-based programming language with async/await syntax"
authors = [{name = "Avi Yeger", email = "yeger00@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "textual>=2.1.2",
    "textual-textarea>=0.14.4",
]
requires-python = ">=3.11"
packages = [{include = "aython", from = "src"}]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
aython = "aython:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aython"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "textual-dev>=1.7.0",
]
